--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -14,12 +14,16 @@
     <form class="form-signin" method="post" action="/login">
         <h2 class="form-signin-heading">Please login to Student Portal</h2>
         <p>
-            <label for="username" class="sr-only">Username</label>
+            <label for="username">Username</label>
             <input type="text" id="username" name="username" class="form-control" placeholder="Username" required autofocus>
         </p>
         <p>
-            <label for="password" class="sr-only">Password</label>
+            <label for="password">Password</label>
             <input type="password" id="password" name="password" class="form-control" placeholder="Password" required>
+        </p>
+        <p>
+            <label for="remember-me">Remember Me</label>
+            <input type="checkbox" id="remember-me" name="remember-me" class="form-control" placeholder="Password">
         </p>
         <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
     </form>
